building table interface

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -2,3 +2,5 @@ $error: crimson;
 $backgroundWindow: #b8c1ec;
 $mainBackground: #232946;
 $inputBackground: #fffffe;
+$active: darkgreen;
+$inactive: #ff8c00;
