trying to resolve some troubles

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -2,5 +2,7 @@ $error: crimson;
 $backgroundWindow: #b8c1ec;
 $mainBackground: #232946;
 $inputBackground: #fffffe;
-$active: darkgreen;
-$inactive: #ff8c00;
+$active: #02a202;
+$inactive: #ff9b00;
+$inactive2: #FFD500;
+$salad: #cdfccd;
