--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -138,6 +138,7 @@ body {
 
     .service-buttons {
       display: flex;
+      position: absolute;
       flex-direction: row;
       justify-content: flex-end;
       width: 100%;
@@ -181,6 +182,7 @@ body {
         .client-name {
           margin: auto;
           width: 80%;
+          padding-left: 20px;
         }
 
         .numeric-data {
@@ -217,6 +219,7 @@ body {
           margin-bottom: 20px;
           margin-top: 10px;
           min-height: 60px;
+          padding-left: 20px;
           width: 100%;
 
           &:hover {
@@ -230,6 +233,7 @@ body {
             display: flex;
             justify-content: flex-start;
             min-width: 80%;
+            //padding-left: 20px;
 
             a {
               margin: auto auto auto 0;
@@ -250,14 +254,13 @@ body {
               border-radius: 15px;
               display: flex;
               flex: 0 0 45%;
-              height: 90%;
+              height: 100%;
               justify-content: center;
-              position: relative;
               text-align: center;
-              top: -2px;
 
               &:hover {
                 cursor: pointer;
+                border: 2px solid;
               }
 
               &:active, &:focus {
@@ -267,29 +270,26 @@ body {
 
             .active-objects {
               background-color: $active;
-              box-shadow: 0 2px 0 3px rgba(2, 50, 2, 1);
-              -webkit-box-shadow: 0 2px 0 3px rgba(2, 50, 2, 1);
-              -moz-box-shadow: 0 2px 0 3px rgba(2, 50, 2, 1);
+
+              &:hover {
+                border-color: $salad;
+              }
 
               &:active {
-                top: 2px;
-                box-shadow: 0 0 2px 0 rgba(2, 90, 2, 1);
-                -webkit-box-shadow: 0 0 2px 0 rgba(2, 90, 2, 1);
-                -moz-box-shadow: 0 0 2px 0 rgba(2, 90, 2, 1);
+                background-color: $salad;
               }
             }
 
             .inactive-objects {
               background-color: $inactive;
-              box-shadow: 0 2px 0 3px rgba(169, 96, 2, 1);
-              -webkit-box-shadow: 0 2px 0 3px rgba(169, 96, 2, 1);
-              -moz-box-shadow: 0 2px 0 3px rgba(169, 96, 2, 1);
+
+              &:hover {
+                background-color: $inactive;
+                border-color: $inactive2;
+              }
 
               &:active {
-                top: 2px;
-                box-shadow: 0 0 2px 0 rgb(169, 96, 2);
-                -webkit-box-shadow: 0 0 2px 0 rgb(169, 96, 2);
-                -moz-box-shadow: 0 0 2px 0 rgb(169, 96, 2);
+                background-color: $inactive2;
               }
             }
           }
