--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,5 +1,6 @@
 @import "colors";
 @import "ui-mixins";
+@import url(https://fonts.googleapis.com/css?family=Julius+Sans+One);
 
 @font-face {
   font-family: "Montserrat";
@@ -33,6 +34,110 @@ body {
   margin: 0;
   overflow: hidden;
   text-shadow: 0 0 2px white;
+}
+
+section {
+  align-items: center;
+  background-color: $mainBackground;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  font-size: 40px;
+  font-weight: 100;
+  height: 100vh;
+  justify-content: flex-start;
+}
+
+.nav {
+  text-shadow: 0 0 5px white;
+
+  &__wrapper {
+    position: fixed;
+    height: 100%;
+    padding: 24px;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: flex-end;
+  }
+
+  & {
+    margin: 0 0 100px 30px;
+  }
+
+  &__counter {
+    font-size: 20px;
+    transition: all 0.15s ease-out;
+  }
+
+  &__body {
+    font-weight: 100;
+    font-size: 12px;
+    line-height: 14px;
+    width: 300px;
+    height: 0;
+    overflow: hidden;
+    opacity: 0;
+    transition: height 0.3s ease-out, opacity 0.2s ease-out;
+  }
+
+  li {
+    position: relative;
+    transition: all 0.3s ease-out;
+    margin-bottom: 1em;
+    list-style-type: none;
+
+    &:after {
+      content: '';
+      display: block;
+      border-left: 2px solid white;
+      border-top: 2px solid white;
+      height: 250px;
+      width: 20px;
+      position: absolute;
+      left: -30px;
+      top: 15px;
+    }
+
+    a {
+      display: block;
+      padding: 0;
+      color: #fff;
+      text-decoration: none;
+      transition: all 0.15s ease-out;
+
+      &:hover {
+        background-color: transparent;
+        padding-left: 0.5em
+      }
+
+      &:focus {
+        background-color: transparent;
+      }
+    }
+
+    &.active {
+      pointer-events: none;
+      padding-left: 1em;
+
+      &:after {
+        width: 30px;
+        height: 400px;
+        top: 10px;
+      }
+
+      .nav__counter {
+        font-size: 20px;
+      }
+
+      .nav__body {
+        height: 100px;
+        opacity: 1;
+        overflow: visible;
+      }
+    }
+
+  }
+
 }
 
 .wrapper {
@@ -304,109 +409,108 @@ body {
       }
     }
   }
-}
 
-section {
-  align-items: center;
-  background-color: $mainBackground;
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  font-size: 40px;
-  font-weight: 100;
-  height: 100vh;
-  justify-content: flex-start;
-}
-
-.nav {
-  text-shadow: 0 0 5px white;
-
-  &__wrapper {
-    position: fixed;
-    height: 100%;
-    padding: 24px;
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: flex-end;
-  }
-
-  & {
-    margin: 0 0 100px 30px;
-  }
-
-  &__counter {
-    font-size: 20px;
-    transition: all 0.15s ease-out;
-  }
-
-  &__body {
-    font-weight: 100;
-    font-size: 12px;
-    line-height: 14px;
-    width: 300px;
-    height: 0;
-    overflow: hidden;
-    opacity: 0;
-    transition: height 0.3s ease-out, opacity 0.2s ease-out;
-  }
-
-  li {
-    position: relative;
-    transition: all 0.3s ease-out;
-    margin-bottom: 1em;
-    list-style-type: none;
-
-    &:after {
-      content: '';
-      display: block;
-      border-left: 2px solid white;
-      border-top: 2px solid white;
-      height: 250px;
-      width: 20px;
-      position: absolute;
-      left: -30px;
-      top: 15px;
+  .section4 {
+    @-webkit-keyframes headAnim{
+      0%{ top:0px; }
+      50%{ top:10px; }
+      100% { top:0px;}
     }
 
-    a {
-      display: block;
-      padding: 0;
-      color: #fff;
-      text-decoration: none;
-      transition: all 0.15s ease-out;
-
-      &:hover {
-        background-color: transparent;
-        padding-left: 0.5em
-      }
-
-      &:focus {
-        background-color: transparent;
-      }
+    @-webkit-keyframes bodyAnim{
+      0%{ top:-5px; }
+      50%{ top:10px; }
+      100% { top:-5px;}
     }
 
-    &.active {
-      pointer-events: none;
-      padding-left: 1em;
-
-      &:after {
-        width: 30px;
-        height: 400px;
-        top: 10px;
-      }
-
-      .nav__counter {
-        font-size: 20px;
-      }
-
-      .nav__body {
-        height: 100px;
-        opacity: 1;
-        overflow: visible;
-      }
+    @-webkit-keyframes fontAnim{
+      0%{ width:0; }
+      16%{ width:8ch; }
+      32%{ width:9ch; }
+      48%{ width:10ch; }
+      64%{ width:11ch; }
+      80%{ width:12ch; }
+      100% { width:15ch;}
     }
 
+    .container {
+
+      .circ {
+        -webkit-backface-visibility: hidden;
+        margin: 60px auto;
+        width: 180px; height: 180px;
+        border-radius: 0 0 50px 50px;
+        position: relative;
+        z-index: 1;
+        left: 0; top: 20%;
+        overflow: hidden;
+
+        .load {
+          position: absolute;
+          width: 7ch; height: 32px;
+          text-align: left;
+          line-height: 32px;
+          margin: -10px auto;
+          -webkit-font-smoothing: antialiased;
+          font-family: 'Julius Sans One', sans-serif;
+          font-size:28px;
+          font-weight:400;
+          color:rgba(240,220,220,1);
+          left: 2%; top: 5%;
+          -webkit-animation:fontAnim 3.75s infinite;
+          -webkit-animation-timing-function:ease-out;
+          word-wrap: break-word;
+          display:block;
+          overflow: hidden;
+        }
+
+        .hands {
+          -webkit-backface-visibility: hidden;
+          margin-top: 140px;
+          width: 120px;height: 120px;
+          position: absolute;
+          //background-color: blue;
+          border-radius:20px;
+          box-shadow:-1px -4px 0px 0px rgba(240,220,220,1);
+          -webkit-transform:rotate(45deg);
+          top:75%;left: 16%;
+          z-index: 1;
+          -webkit-animation:bodyAnim 1.5s infinite alternate;
+          -webkit-animation-timing-function:ease-out;
+        }
+
+        .body {
+          position: relative;
+          margin: 90px auto;
+          width: 140px; height: 120px;
+          //background-color: blue;
+          border-radius: 50px/25px ;
+          box-shadow: inset -5px 2px 0px 0px rgba(240,220,220,1);
+          -webkit-animation:bodyAnim 1.5s infinite alternate;
+          -webkit-animation-timing-function:ease-out;
+        }
+
+        .head {
+          -webkit-backface-visibility: hidden;
+          position: relative;
+          margin: -250px auto;
+          width: 80px; height: 80px;
+          background-color: $mainBackground;
+          border-radius:50px;
+          box-shadow: inset -4px 2px 0px 0px rgba(240,220,220,1);
+          -webkit-animation:headAnim 1.5s infinite alternate;
+          -webkit-animation-timing-function:ease-out;
+
+          .eye {
+            width: 20px; height: 8px;
+            background-color: rgba(240,220,220,1);
+            border-radius:0 0 20px 20px;
+            position: relative;
+            left: 10px; top: 40px;
+            box-shadow:  40px 0 0 0 rgba(240,220,220,1);
+          }
+        }
+      }
+    }
   }
-
 }
-
